--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
                     <img src="imagenes/face0.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Juan Perez Echeverria</h4>
-                        <h5><p>Profesor de musica, doctorado en educacion
-                            , jefe de carrera por 5 años y instructor de zumba
-                            vicerrector académico.</h5>
+                        <h5><p>Rector, Profesor de musica, doctorado en educacion
+                            , jefe de carrera por 5 años y instructor de zumba.
+                    </h5>
                     </div>
                 </div>
                 <div class="card">
                     <img src="imagenes/face2.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Miguel Jara</h4>
-                        <H5><p>Graduado de la univerdidad de chile 
-                            como actor, actua como nuestro vicerrectir academico hasta que encontremos 
+                        <H5><p>Vicerrector Academico, Graduado de la univerdidad de chile 
+                            como actor, actua como nuestro vicerrector academico hasta que encontremos 
                             su reemplazo.</p></H5>
                     </div>
                 </div>
@@ -152,20 +152,20 @@
                     <img src="imagenes/face3.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Sebastian Gonzalez</h4>
-                        <H5><p>Director y escritor 
+                        <H5><p>Vicerrector de operaciones, Director y escritor 
                             de la horrible pelicula de torror sobre panaderos,graduado de la universidad
                             catolica, doctorado en artes y certificado como traductor
-                            vicerrector de operaciones.</p></H5>
+                            .</p></H5>
                     </div>
                 </div>
                 <div class="card">
                     <img src="imagenes/face4.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Max Valenzuela</h4>
-                        <H5><p>Conductor de camiones,
+                        <H5><p>Vicerrector de comunicaciones, Conductor de camiones,
                             graduado de 4to medio, instituto nacional, dirigente estudiantil y profesor 
                             de la escuela de conducir regional, empezo siendo guardia
-                            vicerrector de comunicaciones</p></H5>
+                            </p></H5>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                 <img src="imagenes/face1.jfif" alt="">
                 <div class="contenido-texto-card">
                     <h4>Juan Muñoz</h4>
-                    <H5><p>No se de donde salio 
+                    <H5><p>Vicerrector de finanzas, No se de donde salio 
                         pero es simpatico.</p></H5>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                     con tu carnet y certificado de matricula para iniciar el proceso
                     si estas estudiando una carrera de menos de 4 años esta beca la puede cubrir 
                     entrar. <br><br> 
-                    *preguntar para serciorar <br><br>
+                    
                     
                     ¿Ya participaste? Si respondes esta encuenta puedes ganarte un Notebook
                     Para nosotros es importante tu opinion, para participar por un notebook nuevo 
